<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ColorBlindTest.ColorBlindTest">

    3<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberOfTest"
        android:text="@string/numberOfTest"
        android:textSize="30sp"
        android:background="@drawable/border"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/colorBlindTestImg"
        android:layout_below="@+id/numberOfTest"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:padding="1dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAnswer"
        android:id="@+id/tvAnswer"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/colorBlindTestImg"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoAnswer"
        android:id="@+id/tvNoAnswer"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/tvAnswer"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayAnswer"
        android:id="@+id/displayAnswer"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/tvNoAnswer"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputAnswer"
        android:layout_below="@id/colorBlindTestImg"
        android:layout_toEndOf="@+id/tvAnswer"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:maxLength="2"
        android:inputType="number"
        android:digits="0123456789-"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:id="@+id/tvDisplayAnswer"
        android:textSize="18sp"
        android:layout_below="@+id/tvNoAnswer"
        android:layout_toEndOf="@+id/displayAnswer"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/border"
        android:padding="4dp"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnShowAnswer"
        android:text="@string/btnShowAnswer"
        android:layout_below="@id/tvDisplayAnswer"
        android:layout_marginStart="90dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:text="@string/btnNext"
        android:layout_below="@id/tvDisplayAnswer"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="90dp"/>

</RelativeLayout>